<resources>
    <string name="app_name">SafetyApp365</string>
    <string name="contacts">Contacts</string>
    <string name="contact_number">Contact Number</string>
    <string name="name">Name</string>
    <string name="save">SAVE</string>
    <string name="m">M</string>
    <string name="my_friend">My Friend</string>
    <string name="_0123467899">0123467899</string>

    
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_call_status">CallStatus</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_fake_call">FakeCall</string>
</resources>