<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/contact_initial"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/round_shape"
        android:backgroundTint="@color/rose"
        android:gravity="center"
        android:text="@string/m"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/contact_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:ellipsize="end"
        android:ems="3"
        android:maxLines="1"
        android:text="@string/my_friend"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toTopOf="@id/contact_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/contact_initial"
        app:layout_constraintTop_toTopOf="@id/contact_initial"
        android:layout_marginLeft="25dp" />


    <TextView
        android:id="@+id/contact_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0123467899"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/contact_initial"
        app:layout_constraintStart_toStartOf="@id/contact_name"
        app:layout_constraintTop_toBottomOf="@id/contact_name" />

    <ImageView
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_more_vert_24"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="options" />

</androidx.constraintlayout.widget.ConstraintLayout>