<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/candy"
    tools:context=".AddContacts">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/slack"
        android:layout_marginTop="50dp"
        android:contentDescription="logo1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="100dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="4dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:hint="@string/name"
        app:hintTextColor="@color/lilac"
        app:startIconDrawable="@drawable/person"
        app:startIconTint="@color/rose"
        app:endIconMode="clear_text"
        app:endIconTint="@color/rose">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="4dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:hint="@string/contact_number"
        app:hintTextColor="@color/black"
        app:startIconDrawable="@drawable/_phone_android"
        app:startIconTint="@color/rose"
        app:endIconMode="clear_text"
        app:endIconTint="@color/rose">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rl3"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/save"
            android:layout_marginTop="25dp"
            android:textColor="#ffffff"
            android:id="@+id/b3"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts"
            android:layout_marginTop="25dp"
            android:textColor="#ffffff"
            android:background="@drawable/button_bg"
            android:id="@+id/b4"
            android:layout_toRightOf="@+id/b3"
            android:layout_marginLeft="30dp"
            android:padding="10dp"
            android:layout_toEndOf="@+id/b3"
            android:layout_marginStart="30dp" />

    </RelativeLayout>

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/pb3"
        android:visibility="invisible"
        android:layout_marginBottom="10dp"/>





</LinearLayout>